--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 .bg-banner {
   width: 100%;
   height: 100vh;
-  background-image: url(../assets/images/bennerm.png);
+  background-image: url(../images/bennerm.png);
   background-repeat: no-repeat;
   background-position: right bottom;
   background-size: 62rem; }
