--- a/css/style.scss
+++ b/css/style.scss
@@ -18,7 +18,7 @@ body {
 .bg-banner {
     width: 100%;
     height: 100vh;
-    background-image: url(../images/bennerm.png);
+    background-image: url(../images/Banner_final.png);
     background-repeat: no-repeat;
     background-position: right bottom;
     background-size: 62rem;
