--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 .bg-banner {
   width: 100%;
   height: 98vh;
-  background-image: url("../assets/images/Banner_final.png");
+  background-image: url("../images/Banner_final.png");
   background-repeat: no-repeat;
   background-position: right 110px;
   background-size: 38rem;
