--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ body {
 .bg-banner {
     width: 100%;
     height: 110vh;
-    background-image: url(../assets/images/Banner_final.png);
+    background-image: url("../images/Banner_final.png");
     background-repeat: no-repeat;
     background-position: right bottom;
     background-size: 62rem;
